# clubinho_new_style_20251130

./: .env  ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  CONTEXT_SUMMARY_20251205V1522.md  CONVERSATION_SUMMARY_20251205.md  CONVERSATION_SUMMARY_20251207V1142.md  CONVERSATION_SUMMARY_20251207V1220.md  CONVERSATION_SUMMARY_20251207V1445.md  CONVERSATION_SUMMARY_20251207V1558.md  README.md  TESTING_CHECKLIST.md  UI_UX_AUDIT_REPORT.md  app.py  db_backup_20251128_144211.sql  index.html  pyproject.toml  script.js  styles.css  test_calculator_navigation.html
static/css/: custom.css  floating-tools.css  style.css
static/js/: calculator.js  floating-tools.js  interactions.js  orders.js  quotes.js  theme-toggle.js
templates/: admin_login.html  base.html  books.html  create_order.html  customer_account.html  customers.html  dashboard.html  full_backup.py  orders.html  reports.html
templates/partials/: calculator_section.html  order_modals.html
website/: MEDIUM_PRIORITY_ENHANCEMENTS.md
website/static/css/: animations.css  floating-tools.css
website/static/js/: calculator.js
website/templates/: admin_login.html  books.html  create_order.html  customer_account.html  dashboard.html
website/templates/partials/: calculator_section.html
zz_backup_website_20251130/: PARALLAX_TEMPLATE_IMPLEMENTATION.md  README.md  app.py
zz_backup_website_20251130/static/css/: accessibility.css  page-enhancements.css  parallax.css  style.css  themes.css
zz_backup_website_20251130/templates/: base.html  customers.html  orders.html  print_label.html  reports.html
(+3 files in other folders)
